tests/hep27_const_numeric_param_requires_const_bad.hop
// Verifies HEP 27 const numeric parameter requires const is rejected.
fn bad(x const_float) {
	_ = x
}

fn main() {}
